Removing device-specific code (6) rename
Signed-off-by: Szczepan Zalega <szczepan@nitrokey.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -135,7 +135,7 @@ SET(nitrokey_app_sources
     ${SRCUIDIR}/stick20-response-task.cpp
     ${SRCUIDIR}/stick20updatedialog.cpp
     ${platform_specific_sources}
-        src/libnitrokey_adapter.cpp src/libnitrokey_adapter.h src/utils/bool_values.h)
+        src/libada.cpp src/libada.h src/utils/bool_values.h)
 
 # Freedesktop files
 IF(NOT WIN32)
