--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ dist: trusty
 
 before_install:
   - sudo add-apt-repository --yes ppa:beineri/opt-qt551-trusty
-  - sudo add-apt-repository --yes ppa:ubuntu-toolchain-r-test
+  - sudo add-apt-repository --yes ppa:ubuntu-toolchain-r/test
   - sudo apt-get -qq update
   - sudo apt-get -qq install qt55base
   - sudo apt-get install -y cmake libhidapi-dev g++-5 clang-3.8
