--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,9 @@
+language: generic
+
 notifications:
     email: false
-language: c++
 os:
   - linux
-#  - osx
 
 sudo: true #for beineri qt551
 dist: trusty
@@ -15,9 +15,6 @@ before_install:
   - sudo apt-get -qq install qt55base
   - sudo apt-get install -y cmake libhidapi-dev g++-5 clang-3.8
 
-compiler:
-  - g++
-  - clang++
 
 script:
   - if [ "TRAVIS_OS_NAME" == "linux" ]; then source /opt/qt55/bin/qt55-env.sh ; fi
@@ -28,13 +25,13 @@ script:
   - if [ "$builder" == "cmake" ]; then cmake . && make VERBOSE=1; fi
 
 env:
-  - builder=cmake
-  - builder=qmake
+  - builder=cmake CXX=clang++-3.8 CC=clang-3.8
+  - builder=qmake CXX=clang++-3.8 CC=clang-3.8
+  - builder=cmake CXX=g++-5 CC=gcc-5
+  - builder=qmake CXX=g++-5 CC=gcc-5
 
 matrix:
   exclude:
-    - compiler: clang++
-      env: builder=qmake
   include:
     - os: osx
       osx_image: xcode7.3 #default
