--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ before_install:
   - sudo add-apt-repository --yes ppa:beineri/opt-qt551-trusty
   - sudo add-apt-repository --yes ppa:ubuntu-toolchain-r/test
   - sudo apt-get -qq update
-  - sudo apt-get -qq install qt55base
+  - sudo apt-get -qq install qt55base  qt55tools # qttools5-dev
   - sudo apt-get install -y cmake libhidapi-dev g++-5 clang-3.8
 
 
@@ -20,7 +20,7 @@ script:
   - if [ "TRAVIS_OS_NAME" == "linux" ]; then source /opt/qt55/bin/qt55-env.sh ; fi
   - if [ "TRAVIS_OS_NAME" == "linux" ]; then export QMAKE=/opt/qt55/bin/qmake; fi
   - if [ "TRAVIS_OS_NAME" == "osx" ]; then export QMAKE=qmake; fi
-  - if [ "$builder" == "qmake" ]; then cd libnitrokey/build/ && cmake .. && make ; fi
+  - if [ "$builder" == "qmake" ]; then pushd libnitrokey/build/ && cmake .. && make; popd ; fi
   - if [ "$builder" == "qmake" ]; then ${QMAKE} && make ; fi
   - if [ "$builder" == "cmake" ]; then cmake . && make VERBOSE=1; fi
 
@@ -36,9 +36,12 @@ matrix:
     - os: osx
       osx_image: xcode7.3 #default
       before_install:
+      env:
     - os: osx
       osx_image: xcode6.4
       before_install:
+      env:
     - os: osx
       osx_image: xcode8.2
       before_install:
+      env:
