--- a/.travis.yml
+++ b/.travis.yml
@@ -5,21 +5,21 @@ notifications:
 os:
   - linux
 
-sudo: true #for beineri qt551
+sudo: true #for beineri qt561
 dist: trusty
 
 before_install:
-  - sudo add-apt-repository --yes ppa:beineri/opt-qt551-trusty
+  - sudo add-apt-repository --yes ppa:beineri/opt-qt562-trusty
   - sudo add-apt-repository --yes ppa:ubuntu-toolchain-r/test
   - sudo apt-get -qq update
-  - sudo apt-get -qq install qt55base  qt55tools # qttools5-dev
+  - sudo apt-get -qq install qt56base  qt56tools # qttools5-dev
   - sudo apt-get install -y cmake libhidapi-dev g++-5 clang-3.8
 
 
 script:
   - echo "${TRAVIS_OS_NAME}" 
-  - if [ "${TRAVIS_OS_NAME}" == "linux" ]; then source /opt/qt55/bin/qt55-env.sh ; fi
-  - if [ "${TRAVIS_OS_NAME}" == "linux" ]; then export QMAKE=/opt/qt55/bin/qmake; fi
+  - if [ "${TRAVIS_OS_NAME}" == "linux" ]; then source /opt/qt56/bin/qt56-env.sh ; fi
+  - if [ "${TRAVIS_OS_NAME}" == "linux" ]; then export QMAKE=/opt/qt56/bin/qmake; fi
   - if [ "${TRAVIS_OS_NAME}" == "osx" ]; then export QMAKE=qmake; fi
   - if [ "$builder" == "qmake" ]; then pushd libnitrokey/build/ && cmake .. && make; popd ; fi
   - if [ "$builder" == "qmake" ]; then ${QMAKE} && make ; fi
@@ -37,12 +37,16 @@ matrix:
     - os: osx
       osx_image: xcode7.3 #default
       before_install:
-      env:
+      env: builder=cmake
+    - os: osx
+      osx_image: xcode7.3 #default
+      before_install:
+      env: builder=qmake
     - os: osx
       osx_image: xcode6.4
       before_install:
-      env:
+      env: builder=qmake
     - os: osx
       osx_image: xcode8.2
       before_install:
-      env:
+      env: builder=qmake
