--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ before_install:
   - sudo add-apt-repository --yes ppa:ubuntu-toolchain-r/test
   - sudo apt-get -qq update
   - sudo apt-get -qq install ${AF} qt56base  qt56tools # qttools5-dev
-  - sudo apt-get -qq install ${AF} cmake libhidapi-dev g++-5 clang-3.8
+  - sudo apt-get -qq install ${AF} cmake libhidapi-dev g++-5 g++-6 clang-3.8
 
 cache:
 #  - apt
@@ -36,6 +36,7 @@ env:
     - builder=qmake CXX=clang++-3.8 CC=clang-3.8
     - builder=cmake CXX=g++-5 CC=gcc-5
     - builder=qmake CXX=g++-5 CC=gcc-5
+    - builder=qmake CXX=g++-6 CC=gcc-6
   global:
     - AF="-yq --no-install-suggests --no-install-recommends --force-yes"
 
