--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,7 @@ before_install:
   - sudo add-apt-repository --yes ppa:ubuntu-toolchain-r/test
   - sudo apt-get -qq update
   - sudo apt-get -qq install ${AF} qt56base  qt56tools # qttools5-dev
+  - sudo apt-get -qq remove g++
   - sudo apt-get -qq install ${AF} cmake libhidapi-dev g++-5 g++-6 clang-3.8
 
 cache:
