--- a/.travis.yml
+++ b/.travis.yml
@@ -13,8 +13,8 @@ before_install:
   - sudo add-apt-repository --yes ppa:ubuntu-toolchain-r/test
   - sudo apt-get -qq update
   - sudo apt-get -qq install ${AF} qt56base  qt56tools # qttools5-dev
-  - sudo apt-get -qq remove g++
-  - sudo apt-get -qq install ${AF} cmake libhidapi-dev g++-5 g++-6 clang-3.8
+  - sudo apt-get -qq install ${AF} cmake libhidapi-dev ${COMP}
+  - sudo apt-get -qq remove gcc-4.8 g++-4.8 --purge
 
 cache:
   - ccache
@@ -28,16 +28,16 @@ script:
   - if [ "${TRAVIS_OS_NAME}" == "osx" ]; then export QMAKE=qmake; fi
   - if [ "${TRAVIS_OS_NAME}" == "osx" ]; then brew update; brew install ccache; brew install qt5; brew unlink cmake; brew install cmake; export CMAKE_PREFIX_PATH=/usr/local/lib/cmake; fi
   - if [ "$builder" == "qmake" ]; then pushd libnitrokey/build/ && cmake .. && make; popd ; fi
-  - if [ "$builder" == "qmake" ]; then ${QMAKE} && make CXX=${CXX} CC=${CC} ; fi
+  - if [ "$builder" == "qmake" ]; then ${QMAKE} && make CXX=${CXX} CC=${CC} LINK=${CXX} ; fi
   - if [ "$builder" == "cmake" ]; then cmake . && make VERBOSE=1; fi
 
 env:
   matrix:
-    - builder=cmake CXX=clang++-3.8 CC=clang-3.8
-    - builder=qmake CXX=clang++-3.8 CC=clang-3.8
-    - builder=cmake CXX=g++-5 CC=gcc-5
-    - builder=qmake CXX=g++-5 CC=gcc-5
-    - builder=qmake CXX=g++-6 CC=gcc-6
+    - builder=cmake CXX=clang++-3.8 CC=clang-3.8 COMP="clang-3.8 g++-5"
+    - builder=qmake CXX=clang++-3.8 CC=clang-3.8 COMP="clang-3.8 g++-5"
+    - builder=cmake CXX=g++-5 CC=gcc-5 COMP=g++-5
+    - builder=qmake CXX=g++-5 CC=gcc-5 COMP=g++-5
+    - builder=qmake CXX=g++-6 CC=gcc-6 COMP=g++-6
   global:
     - AF="-yq --no-install-suggests --no-install-recommends --force-yes"
 
