--- a/.travis.yml
+++ b/.travis.yml
@@ -26,7 +26,7 @@ script:
   - if [ "${TRAVIS_OS_NAME}" == "linux" ]; then source /opt/qt56/bin/qt56-env.sh ; fi
   - if [ "${TRAVIS_OS_NAME}" == "linux" ]; then export QMAKE=/opt/qt56/bin/qmake; fi
   - if [ "${TRAVIS_OS_NAME}" == "osx" ]; then export QMAKE=qmake; fi
-  - if [ "${TRAVIS_OS_NAME}" == "osx" ]; then brew update; brew install ccache; brew install qt5; brew unlink cmake; brew install cmake; export CMAKE_PREFIX_PATH=/usr/local/lib/cmake; fi
+  - if [ "${TRAVIS_OS_NAME}" == "osx" ]; then brew update; brew install ccache; brew install qt5; brew unlink cmake; brew install cmake; export ; fi
   - if [ "$builder" == "qmake" ]; then pushd libnitrokey/build/ && cmake .. && make; popd ; fi
   - if [ "$builder" == "qmake" ]; then ${QMAKE} && make CXX=${CXX} CC=${CC} LINK=${CXX} ; fi
   - if [ "$builder" == "cmake" ]; then cmake . && make VERBOSE=1; fi
@@ -47,16 +47,16 @@ matrix:
     - os: osx
       osx_image: xcode7.3 #default
       before_install:
-      env: builder=cmake PATH="/usr/local/opt/qt5/bin:$PATH
+      env: builder=cmake PATH="/usr/local/opt/qt5/bin:$PATH" CMAKE_PREFIX_PATH=/usr/local/lib/cmake
     - os: osx
       osx_image: xcode7.3 #default
       before_install:
-      env: builder=qmake PATH="/usr/local/opt/qt5/bin:$PATH
+      env: builder=qmake PATH="/usr/local/opt/qt5/bin:$PATH" CMAKE_PREFIX_PATH=/usr/local/lib/cmake
     - os: osx
       osx_image: xcode6.4
       before_install:
-      env: builder=qmake PATH="/usr/local/opt/qt5/bin:$PATH
+      env: builder=qmake PATH="/usr/local/opt/qt5/bin:$PATH" CMAKE_PREFIX_PATH=/usr/local/lib/cmake
     - os: osx
       osx_image: xcode8.2
       before_install:
-      env: builder=qmake PATH="/usr/local/opt/qt5/bin:$PATH
+      env: builder=qmake PATH="/usr/local/opt/qt5/bin:$PATH" CMAKE_PREFIX_PATH=/usr/local/lib/cmake
