--- a/.gitmodules
+++ b/.gitmodules
@@ -2,5 +2,5 @@
 	path = libnitrokey
 	url = https://github.com/Nitrokey/libnitrokey.git
 [submodule "cppcodec"]
-	path = cppcodec
+	path = 3rdparty/cppcodec
 	url = https://github.com/tplgy/cppcodec.git
