--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "cppcodec"]
 	path = 3rdparty/cppcodec
 	url = https://github.com/tplgy/cppcodec.git
+[submodule "3rdparty/fervor"]
+	path = 3rdparty/fervor
+	url = https://github.com/pypt/fervor.git
