--- a/debian/control
+++ b/debian/control
@@ -2,7 +2,7 @@ Source: nitrokey-app
 Section: universe/utils
 Priority: optional
 Maintainer: Jan Suhr <jan@nitrokey.com>
-Build-Depends: debhelper (>= 9), qtchooser, libqt5core5a, libqt5dbus5, libqt5gui5, libqt5widgets5, libqt5xml5, qt5-qmake, qtbase5-dev-tools, qtbase5-dev, libhidapi-dev, cmake
+Build-Depends: debhelper (>= 9), qtchooser, libqt5core5a, libqt5dbus5, libqt5gui5, libqt5widgets5, libqt5xml5, qt5-qmake, qtbase5-dev-tools, qtbase5-dev, libhidapi-dev, cmake, qttools5-dev-tools
 Standards-Version: 3.9.7
 Homepage: https://www.nitrokey.com
 
