--- a/.travis.yml
+++ b/.travis.yml
@@ -26,7 +26,7 @@ script:
   - if [ "${TRAVIS_OS_NAME}" == "linux" ]; then source /opt/qt56/bin/qt56-env.sh ; fi
   - if [ "${TRAVIS_OS_NAME}" == "linux" ]; then export QMAKE=/opt/qt56/bin/qmake; fi
   - if [ "${TRAVIS_OS_NAME}" == "osx" ]; then export QMAKE=qmake; fi
-  - if [ "${TRAVIS_OS_NAME}" == "osx" ]; then brew update; brew install ccache; brew install qt5; brew unlink cmake; brew install cmake; export ; fi
+  - if [ "${TRAVIS_OS_NAME}" == "osx" ]; then brew update; brew install qt5; brew unlink cmake; brew install cmake; export ; fi
   - if [ "$builder" == "qmake" ]; then pushd libnitrokey/build/ && cmake .. && make; popd ; fi
   - if [ "$builder" == "qmake" -a "${TRAVIS_OS_NAME}" == "osx" ]; then ${QMAKE} && make ; fi
   - if [ "$builder" == "qmake" -a "${TRAVIS_OS_NAME}" == "linux" ]; then ${QMAKE} && make CXX=${CXX} CC=${CC} LINK=${CXX} ; fi
@@ -42,6 +42,7 @@ env:
   global:
     - AF="-yq --no-install-suggests --no-install-recommends --force-yes"
 
+
 matrix:
   exclude:
   include:
@@ -51,10 +52,6 @@ matrix:
       env: builder=cmake PATH="/usr/local/opt/qt5/bin:$PATH" CMAKE_PREFIX_PATH=/usr/local/lib/cmake MACOS_DEPLOYMENT_TARGET=10.9
     - os: osx
       osx_image: xcode7.3 #default
-      before_install:
-      env: builder=qmake PATH="/usr/local/opt/qt5/bin:$PATH" CMAKE_PREFIX_PATH=/usr/local/lib/cmake MACOS_DEPLOYMENT_TARGET=10.9
-    - os: osx
-      osx_image: xcode6.4
       before_install:
       env: builder=qmake PATH="/usr/local/opt/qt5/bin:$PATH" CMAKE_PREFIX_PATH=/usr/local/lib/cmake MACOS_DEPLOYMENT_TARGET=10.9
     - os: osx
