--- a/appveyor.yml
+++ b/appveyor.yml
@@ -24,3 +24,4 @@ on_failure:
 # Uncomment this to debug AppVeyor failures.
 #on_finish:
 #  - ps: $blockRdp = $true; iex ((new-object net.webclient).DownloadString('https://raw.githubusercontent.com/appveyor/ci/master/scripts/enable-rdp.ps1'))
+# update
