--- a/appveyor.yml
+++ b/appveyor.yml
@@ -9,12 +9,20 @@ environment:
   - BUILD: msvc
     PLATFORM: x64
   - BUILD: mingw
+  - install:
+      - set QTDIR=C:\Qt\5.5\mingw492_32
+      - set PATH=%PATH%;%QTDIR%\bin;C:\MinGW\bin
+    build_script:
+      - git submodule update --init --recursive
+      - qmake .
+      - mingw32-make
 
 before_build:
   # Workaround for CMake not wanting sh.exe on PATH for MinGW.
   - set PATH=%PATH:C:\Program Files\Git\usr\bin;=%
 
 build_script:
+  - git submodule update --init --recursive
   - python support/appveyor-build.py
 
 on_failure:
