--- a/appveyor.yml
+++ b/appveyor.yml
@@ -10,8 +10,8 @@ environment:
     PLATFORM: x64
   - BUILD: mingw
   - install:
-      - set QTDIR=C:\Qt\5.5\mingw492_32
-      - set PATH=%PATH%;%QTDIR%\bin;C:\MinGW\bin
+      - 'set QTDIR=C:\Qt\5.5\mingw492_32'
+      - 'set PATH=%PATH%;%QTDIR%\bin;C:\MinGW\bin'
     build_script:
       - git submodule update --init --recursive
       - qmake .
