remove multiple lines
Signed-off-by: Szczepan Zalega <szczepan@nitrokey.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,10 +25,7 @@ IF(UNIX)
     ENDIF()
 ENDIF()
 
-set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} 
-	${CMAKE_USER_MOD_PATH}
-	$ENV{CMAKE_USER_MOD_PATH}
-)
+set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${CMAKE_USER_MOD_PATH} $ENV{CMAKE_USER_MOD_PATH})
 
 #add CMake build info
 ADD_DEFINITIONS(-DCMAKE_BUILD_TYPE="${CMAKE_BUILD_TYPE}")
