Fix translation issues

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -90,7 +90,7 @@ IF (UNIX AND NOT APPLE)
 	ADD_SUBDIRECTORY(i18n)
 	find_package(Qt5LinguistTools)
 	file(GLOB i18n_files "i18n/*.ts")
-	qt5_create_translation(i18n_resources ${FILES_TO_TRANSLATE} ${i18n_files})
+	qt5_create_translation(i18n_resources ${SRCUIDIR} ${i18n_files})
 	qt5_add_translation(TRANSLATION_QM ${i18n_files})
 ENDIF()
 
