--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -212,7 +212,7 @@ find_package(PkgConfig)
 pkg_search_module(LIBNITROKEY libnitrokey-1)
 
 if(LIBNITROKEY_FOUND)
-  MESSAGE("Found system libnitrokey")
+  MESSAGE(STATUS "Found system libnitrokey (flags: ${LIBNITROKEY_CFLAGS} ${LIBNITROKEY_LDFLAGS})")
   if (BUILD_SHARED_LIBS)
     target_compile_options(nitrokey-app PRIVATE ${LIBNITROKEY_CFLAGS})
     target_link_libraries(nitrokey-app ${LIBNITROKEY_LDFLAGS})
@@ -223,6 +223,7 @@ if(LIBNITROKEY_FOUND)
 else()
   MESSAGE("Using bundled libnitrokey")
   add_subdirectory (libnitrokey)
+  include_directories(libnitrokey)
   target_link_libraries(nitrokey-app nitrokey)
 endif()
 
