--- a/debian/control
+++ b/debian/control
@@ -2,13 +2,13 @@ Source: nitrokey-app
 Section: universe/utils
 Priority: optional
 Maintainer: Jan Suhr <jan@nitrokey.com>
-Build-Depends: debhelper (>= 9), qtchooser, libqt5core5a, libqt5dbus5, libqt5gui5, libqt5widgets5, libqt5xml5, qt5-qmake, qtbase5-dev-tools, qtbase5-dev, libhidapi-dev, cmake
+Build-Depends: debhelper (>= 9), qtchooser, libqt5core5a, libqt5dbus5, libqt5gui5, libqt5widgets5, libqt5xml5, qt5-qmake, qtbase5-dev-tools, qtbase5-dev, libhidapi-dev, cmake, libqt5svg5-dev
 Standards-Version: 3.9.7
 Homepage: https://www.nitrokey.com
 
 Package: nitrokey-app
 Architecture: any
-Depends: ${shlibs:Depends}, ${misc:Depends}, libqt5core5a, libqt5dbus5, libqt5gui5, libqt5widgets5, libqt5xml5, libhidapi-libusb0
+Depends: ${shlibs:Depends}, ${misc:Depends}, libqt5core5a, libqt5dbus5, libqt5gui5, libqt5widgets5, libqt5xml5, libhidapi-libusb0, libqt5svg5
 Description: Nitrokey App for usage with Nitro Key Pro
  The Nitrokey App is required for Nitrokey Pro and Nitrokey Storage.
  It offers Google Authenticator compatible One-Time-Passwords and
