CI: remove ccache
Remove it for now. Its cache is handled automatically, but only when the language is set to C/C++.
In that mode however there are issues with build configuration, hence it had to be generic and with manual handling
of the ccache cache folder (giving the path to cache folder by hand).

Signed-off-by: Szczepan Zalega <szczepan@nitrokey.com>

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,11 +13,10 @@ before_install:
   - sudo add-apt-repository --yes ppa:ubuntu-toolchain-r/test
   - sudo apt-get -qq update
   - sudo apt-get -qq install ${AF} qt56base qt56tools qt56svg  # qttools5-dev
-  - sudo apt-get -qq install ${AF} ccache cmake libhidapi-dev ${COMP}
+  - sudo apt-get -qq install ${AF} cmake libhidapi-dev ${COMP}
   - sudo apt-get -qq remove gcc-4.8 g++-4.8 --purge
 
 cache:
-  - ccache
   - apt
 
 
