Remove redundant libnitrokey build. Update modules
Signed-off-by: Szczepan Zalega <szczepan@nitrokey.com>

--- a/debian/rules
+++ b/debian/rules
@@ -6,13 +6,13 @@ export QT_SELECT=qt5
 clean:
 	-rm build
 	-rm nitrokey-app
+	git submodule update --init --recursive
 	dh_testdir
 	qmake -qt=qt5
 	make clean
 	dh_clean -A
 
 build:
-	cd libnitrokey/build && cmake .. && ${MAKE}
 	qmake -qt=qt5
 	${MAKE}
 	touch build
