--- a/.travis.yml
+++ b/.travis.yml
@@ -16,8 +16,8 @@ before_install:
   - sudo apt-get -qq install ${AF} cmake libhidapi-dev ${COMP}
   - sudo apt-get -qq remove gcc-4.8 g++-4.8 --purge
 
-cache:
-  - apt
+#cache:
+#  - apt
 
 
 script: |
@@ -46,10 +46,10 @@ env:
 
 
 matrix:
-  exclude:
+#  exclude:
   include:
     - os: osx
-      osx_image: xcode7.3 #default
+      osx_image: xcode8.3 #default
       before_install: &before
         - brew update
         - brew install qt5
@@ -58,11 +58,7 @@ matrix:
         - export
       env: builder=cmake PATH="/usr/local/opt/qt5/bin:$PATH" CMAKE_PREFIX_PATH=/usr/local/lib/cmake MACOS_DEPLOYMENT_TARGET=10.9
     - os: osx
-      osx_image: xcode7.3 #default
-      before_install: *before
-      env: builder=qmake PATH="/usr/local/opt/qt5/bin:$PATH" CMAKE_PREFIX_PATH=/usr/local/lib/cmake MACOS_DEPLOYMENT_TARGET=10.9
-    - os: osx
-      osx_image: xcode8.3
+      osx_image: xcode8.3 #default
       before_install: *before
       env: builder=qmake PATH="/usr/local/opt/qt5/bin:$PATH" CMAKE_PREFIX_PATH=/usr/local/lib/cmake MACOS_DEPLOYMENT_TARGET=10.9
     - os: osx
