Add manual page for nitrokey-app based on --help output.
Signed-off-by: Jan Luca Naumann <j.naumann@fu-berlin.de>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -157,6 +157,12 @@ IF(NOT WIN32)
     DESTINATION ${CMAKE_INSTALL_DATAROOTDIR}/pixmaps
   )
 
+  # Install man page
+  install(FILES
+    ${CMAKE_SOURCE_DIR}/data/nitrokey-app.1
+    DESTINATION ${CMAKE_INSTALL_DATAROOTDIR}/man/man1
+  )
+
   find_package(PkgConfig)
 
   # Install Nitrokey udev rules
