UI: warn about old libnitrokey version used
Fixes https://github.com/Nitrokey/nitrokey-app/issues/442

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -63,6 +63,7 @@ ELSE()
 ENDIF()
 
 add_definitions(-DGUI_VERSION="${PROJECT_VERSION}")
+add_definitions(-DLIBNK_MIN_VERSION="${LIBNK_MIN_VERSION}")
 
 
 # for out of source build
